--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -52,7 +52,7 @@ spec:
     spec:
       containers:
         - name: kubenews
-          image: christiannd/kubenews:v1
+          image: christiannd/kubenews:{{TAG}}
           ports:
             - containerPort: 8080
           env:
