--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -49,6 +49,10 @@ spec:
     metadata:
       labels:
         app: kubenews
+      annotations:
+        prometheus.io/scrap: "true"
+        prometheus.io/port: "8080"
+        prometheus.path: "/metrics"
     spec:
       containers:
         - name: kubenews
